# wireshark

./: .gitignore  CMakeListsCustom.txt  Makefile  README.md  sharkd.c  sharkd_daemon.c
.github/workflows/: test-sharkd.yml
epan/: packet.c  proto.c  register.c
plugins/epan/foo/: CMakeLists.txt  packet-foo.c
py/: betterfoo.py  cap1.pcapng  cap_fb1.pcapng  client.py  fb1.py  foo_flags.pcapng  luafoo.lua  quiet-server.py  server.py
py/test/: sharkd_in1.txt  sharkd_in2.txt  test1_output_ideal.txt  test_sharkd.sh  test_sharkd1.sh  test_sharkd2.sh
tools/: make-regs.py
wsutil/: plugins.c
